Fix dock icon alignment

--- a/app/assets/stylesheets/components/_dock.scss
+++ b/app/assets/stylesheets/components/_dock.scss
@@ -134,7 +134,7 @@ summary.dock__item {
       background-color 0.125s ease-in-out;
     color: $black;
     line-height: 1.25;
-    padding: 0.25rem 1rem 0.25rem 0.5rem;
+    padding: 0.25rem;
     margin-bottom: 2px;
     color: $black;
 
